Fixing white space under footer

--- a/css/extra/scrolling-nav.css
+++ b/css/extra/scrolling-nav.css
@@ -60,7 +60,7 @@ of those sections to manage the look and feel of the site. */
 }
 .footer-section {
     height: 40px;
-    padding-top: 150px;
+    padding-top: 15px;
     text-align: center;
     background: #000;
 }
